# iridiumcao.github.io

./: .gitattributes  .gitignore  3rd_party_links.md  Install_JDK17_Ubuntu.md  README.md  about.md  ai1ai2.md  announcement.md  bash_script_retrieve_substring.md  bbs_roll.md  binary_text.md  bitcoin_value.md  bloackchain_training.md  blog.md  book_roll.md  clean_local_git_repository.md  daily_review.md  donation.md  easter_egg_hidden_in_famous_softwares.md  explore_the_operation_properties_of_boolean_algebra.md  git.md  git_submodule_test.md  house_price_rent.md  how-to-lose-time-and-money.md  how_to_describe_a_bug.md  how_to_install_docker_on_centos8.md  index.md  index_en.md  index_zh.md  install_temurin_openjdk.md  laozi-version.md  learn_gimp.md  learn_latex.md  link_roll.md  links_roll.md  meng_gui.md  oo-design-principle.md  pinyin.md  simple-ask-and-answer.md  ssh-failed.md  (+9 more)
TaoTeChing/: ch01.md  ch02.md  ch03.md  index.md  index_zh.md
ai/: 1st_ai_4_complex_problem.md  1st_ai_4_complex_problem_draft.md  ai1ai2.md  first-time-ai-complex-problem.md  first-time-ai-complex-problem_draft.md
algorithm/: 99table.md  exchange-two-values.md  find-the-second.md  index.md  index_en.md  index_zh.md  p1m2p3m4.md  recursion_and_loop.md  weight_of_stone.md
blockchain/: DeFi.md  altercoin_price.md  binance_btc_unit.md  bitcoin_concepts.md  bitcoin_value.md  bloackchain_training.md  blockchain_words.md  index.md  (+20 more)
python/package/code/demo/: README.md  pyproject.toml
python/package/code/demo/src/iridiumcao/: __init__.py  utils.py
python/package/code/demo/test/: test_utils.py
(+433 files in other folders)
